--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-lines-ellipsis": "^0.7.3",
     "react-scripts": "1.0.14"
   },
   "scripts": {
